force-app/main/default/objects/Inverter_Event__e/Inverter_Event__e.object-meta.xml
<CustomObject>
    <description>Events generated by solar panel inverters.</description>
    <label>Inverter Event</label>
    <pluralLabel>Inverter Events</pluralLabel>
</CustomObject>