force-app/main/default/objects/Inverter_Event__e/fields/grid_output__c.field-meta.xml
<CustomField>
    <fullName>grid_output__c</fullName>
    <description>Measure of the inverter's output or consumption of power.</description>
    <label>grid output</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>