force-app/main/default/objects/Inverter_Event__e/fields/model__c.field-meta.xml
<CustomField>
    <fullName>model__c</fullName>
    <description>Inverter model.</description>
    <label>model</label>
    <length>255</length>
    <type>Text</type>
</CustomField>