force-app/main/default/objects/Inverter_Event__e/fields/serial_no__c.field-meta.xml
<CustomField>
    <fullName>serial_no__c</fullName>
    <description>Serial number of the inverter</description>
    <label>serial no</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>