force-app/main/default/objects/Inverter_Event__e/fields/series__c.field-meta.xml
<CustomField>
    <fullName>series__c</fullName>
    <description>Name of inverter product series.</description>
    <label>series</label>
    <length>255</length>
    <type>Text</type>
</CustomField>